--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>龚露安个人简历</title>
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="https://an-gong.github.io/resume/static/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.min.js"></script>
-    <script src="static/js/script.js"></script>
+    <script src="https://an-gong.github.io/resume/static/js/script.js"></script>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <div class="side">
         	
             <div class="me">
-                <div class="portrait" style="background-image: url('static/image/photo.jpg');">
+                <div class="portrait">
                 	<!-- 网页打印时设置打印背景即可打印上面设置的头像 -->
                 	<!--<img src="static/image/photo.jpg" alt="" height="160" width="160">-->
                 </div>
