--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <h3>国土空间规划‘一张图’实施监督信息系统 | 2019.07 - 至今</h3>
                         <p>
                             <b font-size="small">项目描述：</b>服务于国土空间规划编制、审批、实施和监督全过程，形成国土空间规划“一张图”，为实现可感知、能学习、善治理和自适应的智慧型规划提供信息化支撑，进行数据资源、指标模型、标准规范和基础环境建设并加强保障措施。<br>
-						    <b font-size="small">责任描述：</b><br>1.功能开发（资源承载能力预警模块开发、监测预警地图联动显示、地图专题制作和打印）<br>
+						    <b font-size="small">责任描述：</b><br>功能开发（资源承载能力预警模块开发、监测预警地图联动显示、地图专题制作和打印）<br>
 
                         </p>
 					</li>
