--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         	广州奥格智能智能科技有限公司 | 研发中心 | 智慧规划研发部<br>
                         </h3>
                         <p contenteditable="true">
-	                        <b font-size="small">工作描述:</b>主要从事于国土空间规划相关业务功能系统的开发及优化，涉及地图功能前后端实现，页面布局优化，实施项目技术支持；参与研发的相关系统操作说明书、相软著申报初稿、专利初稿、参赛技术论文和PPT的撰写和制作。<br>
+	                        <b font-size="small">工作描述:</b>主要从事于国土空间规划相关业务功能系统的开发及优化，涉及地图功能前后端实现，页面布局优化，实施项目技术支持；参与研发的相关系统操作说明书、相关软著申报初稿、专利初稿、参赛技术论文和PPT的撰写和制作。<br>
                         </p>
                     </li>
                 </ul class="experience-list">
