--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="side">
         	
             <div class="me">
-                <div class="portrait" style="background-image: url('static/image/photo.jpg');">
+                <div class="portrait" style="background-image: url('static/image/photo1.jpg');">
                 	<!-- 网页打印时设置打印背景即可打印上面设置的头像 -->
                 	<!--<img src="static/image/photo.jpg" alt="" height="160" width="160">-->
                 </div>
@@ -37,16 +37,20 @@
                 <ul class="info-list">
                     <li>
                         <label class="left-label">姓名</label><span class="label-value">谭国臣</span></li>
+		    <li>
+                        <label class="left-label">出生年月</label><span class="label-value">1992年2月</span></li>
                     <li>
-                        <label class="left-label">学历</label><span class="label-value">本科</span></li>
+			<label class="left-label">工作经验</label><span class="label-value">四 年</span></li>
                     <li>
-                        <label class="left-label">工作经验</label><span class="label-value">4 年</span></li>
+                        <label class="left-label">学历学位</label><span class="label-value">本科学士</span></li>
                     <li>
                         <label class="left-label">毕业院校</label><span class="label-value">湖南农业大学</span></li>
                     <li>
-                        <label class="left-label">毕业时间</label><span class="label-value">2015.06</span></li>
-		     		<li>
-                        <label class="left-label">兴趣爱好</label><span class="label-value">听歌、开发工具</span></li>
+                        <label class="left-label">毕业时间</label><span class="label-value">2015年6月</span></li>
+		    <li>
+                        <label class="left-label">婚姻状况</label><span class="label-value">单身未婚</span></li>
+		    <li>
+                        <label class="left-label">现居</label><span class="label-value">广州天河</span></li>
                 </ul>
             </div>
             <div class="wish info-unit">
@@ -54,17 +58,14 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">工作性质</label><span class="label-value">全职</span>
+                        <label class="left-label">工作性质</label><span class="label-value">广州全职</span>
                     </li>
                     <li>
                         <label class="left-label">期望岗位</label><span class="label-value">java Web开发\前后端开发岗位</span>
                     </li>
                     <li>
-                        <label class="left-label">期望薪资</label><span class="label-value">15 k</span>
-                    </li>      
-                    <li>
-                        <label class="left-label">工作地区</label><span class="label-value">广州</span>
-                    </li>    
+                        <label class="left-label">期望薪资</label><span class="label-value">年薪17-20万</span>
+                    </li>         
                     <li>
                         <label class="left-label">目前状况</label><span class="label-value">处于离职状态，可立即上岗</span>
                     </li>
@@ -83,10 +84,10 @@
                     </li>
                     <li>
                         <label class="left-label">Github</label><span class="label-value" style="white-space: nowrap;">https://github.com/yeqizhang</span>
-					</li>
-					<li>
+		    </li>
+		    <li>
                         <label class="left-label">blog</label><span class="label-value" style="white-space: nowrap;">https://yeqizhang.github.io</span>
-					</li>
+		    </li>
                 </ul>
             </div>
             
@@ -114,7 +115,7 @@
                         <label class="left-label">后端</label><span class="label-value">servlet、SSH&SSM 框架、springboot、oracle、mysql</span></li>
                     </li>
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">easyui、bootstrap、jquey</span></li>
+                        <label class="left-label">前端</label><span class="label-value">html/css、js、jquey、easyui、bootstrap、</span></li>
                     </li>
                     <li>
                         <label class="left-label">其它</label><span class="label-value">Maven、SVN、Git、markdown、linux、nginx、Raspberry Pi</span></li>
