--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
             </div>
             
             <div class="stack info-unit">
-                <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">技术栈</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">技术能力</span></h2>
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">servlet、SSH&SSM 框架、springboot、oracle、mysql</span></li>
+                        <label class="left-label">后端</label><span class="label-value">Java、servlet、SSH&SSM 框架、springboot、oracle、mysql</span></li>
                     </li>
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">html/css、js、jquey、easyui、bootstrap、</span></li>
+                        <label class="left-label">前端</label><span class="label-value">JavaScript、HTML/CSS、echarts、easyui、jquey、bootstrap、vue</span></li>
                     </li>
                     <li>
                         <label class="left-label">其它</label><span class="label-value">Maven、SVN、Git、markdown、linux、nginx、Raspberry Pi</span></li>
