--- a/index.html
+++ b/index.html
@@ -108,18 +108,19 @@
                 <hr>
                 <ul class="stack-list">
 		    <li>
-                        <label class="left-label">开源作品</label><span class="label-value">因热爱编程应用，个人利用树莓派进行linux的开发实战，通过 GPIO 接口采用mysql数据库、flask 框架以及echarts等技术进行python项目开发</span></li>
+                        <label class="left-label">开源作品</label><span class="label-value">因热爱编程应用，个人利用树莓派进行linux的开发实战，通过 GPIO 接口采用mysql数据库、flask 框架以及echarts等技术进行python项目开发</span>
+		    </li>
 		    <li>
-                        <label class="left-label">源码地址</label><span class="label-value">https://github.com/yeqizhang/raspberrypi_ht_statistics</span></li>
+                        <label class="left-label">源码地址</label><span class="label-value">https://github.com/yeqizhang/raspberrypi_ht_statistics</span>
                     </li>
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">Java、servlet、SSH&SSM 框架、springboot、oracle、mysql</span></li>
+                        <label class="left-label">后端</label><span class="label-value">Java、servlet、SSH&SSM 框架、springboot、oracle、mysql</span>
                     </li>
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">JavaScript、HTML/CSS、easyui、echarts、jquey、bootstrap、vue</span></li>
+                        <label class="left-label">前端</label><span class="label-value">JavaScript、HTML/CSS、easyui、echarts、jquey、bootstrap、vue</span>
                     </li>
                     <li>
-                        <label class="left-label">其它</label><span class="label-value">Maven、SVN、Git、markdown、linux、nginx、Raspberry Pi</span></li>
+                        <label class="left-label">其它</label><span class="label-value">Maven、SVN、Git、markdown、linux、nginx、Raspberry Pi</span>
                     </li>
                 </ul>
             </div>            
