--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
                         	彩讯科技股份广州分公司 | 南方移动项目部 | Java后端开发<br>
                         </h3>
                         <p contenteditable="true">
-	                        <b font-size="small">经历总结:</b>
-	                        参与研发项目的开发，进行业务的实现，与地图开发的同事对接，开发设计系统界面； 对研发项目应用到实施的项目的支持；对负责开发的一些模块使用文档的撰写。<br>
+	                        <b font-size="small">经历总结:</b>如果出现实时线上问题会让人绷紧每条神经、经常晚上一两点上线、周末也要呆在有电脑的地方这是我对互联网行业的初识，虽然看起来有时候工作时间不稳定，但是实际上的工作内容和压力不会很紧张。此次工作是纯后端开发，不仅仅是功能接口的实现更多的在于接口性能上的优化，比如多线程并发问题怎么样能够在当前环境下得到最优的解决，使我逐步熟悉互联网的高并发架构和数据运营等<br>
                         </p>
                     </li>
                     <li>
@@ -150,7 +149,7 @@
                         	广州奥格智能智能科技有限公司 | 规划研发部 | 全栈开发<br>
                         </h3>
                         <p contenteditable="true">
-	                        <b font-size="small">经历总结:</b>
+	                        <b font-size="small">经历总结:</b>这两年半的全栈开发经历是让我成长最多的，通过研发实践，我在团队协助、专业知识等方面的能力得到了很大提高。通过与客户的接触，锻炼了自己的沟通协调能力，通过规划相关业务知识的接触，拓展了个人的业务能力，规划业务、规划系统开发等专业知识的提升，为今后相关项目的开发实施积累了更多的经验。
 	                       	<br>
                         </p>
                     </li>
@@ -160,8 +159,7 @@
 				湖南农业大学后勤服务集团 | java web开发<br>
 			    </h3>
                         <p contenteditable="true">
-				<b font-size="small">经历总结:</b>
-				初出茅庐的我感于老师的赏识，感于其他专业校友的帮助，让我有一个很棒项目初体验，能够按时按量完成任务。此次经历虽然时间很短，但让我对系统各类框架、数据库类型、开发语言多样性有了进一步认知，也初步了解信息系统生命周期，明确了自己的不足和学习发展方向，对软件开发有了执着的热爱。<br>
+				<b font-size="small">经历总结:</b>初出茅庐的我感于老师的赏识，感于其他专业校友的帮助，让我有一个很棒项目初体验，能够按时按量完成任务。此次经历虽然时间很短，但让我对系统各类框架、数据库类型、开发语言多样性有了进一步认知，也初步了解信息系统生命周期，明确了自己的不足和学习发展方向，对软件开发有了执着的热爱。<br>
                         </p>
                     </li>
                 </ul class="experience-list">
@@ -172,26 +170,60 @@
                 <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title">项目经验</span></h2>
                 <hr>
                 <ul class="experience-list">
-                    <li>
-                        <h3>规划管理系统 | 2017.10 - 2018.09</h3>
-                        <p>
-                            <b font-size="small">项目描述：</b>
-				作为“多规合一”平台的扩展系统，结合“多规合一”一张图，主要实现规划的“一书三证”的审批业务需求。平台采用Ads框架进行开发，ads集成了SSH框架、常用的工具包以及GIS开发包。系统的统计展示页面使用echarts。pdf档案在线查看采用mozilla开源的PDF.js。为解决接口负载过大时奔溃的问题，使用nginx进行了负载均衡，session共享的解决方案为spring-session + redis。<br>
-			    <b font-size="small">责任描述：</b><br>
-				1. 负责“一书三证”业务流程的开发；<br>
-				2. 实现对审批过程中产生的附件进行“档案管理”的模块的开发；<br>
-				3. 实现规划知识库模块开发；<br>
-				4. 指导其它新同事熟悉代码工程结构进行需求开发。<br>
-                        </p>
-		    </li>
-                    
-                    <li>
-                        <h3>多规合一信息平台 | 2016.04 - 2017.10</h3>
-                        <p>
-                            <b font-size="small">项目描述：</b>
-							“多规合一”是指统筹衔接国民经济和社会发展规划、城乡规划、土地利用规划和生态环境保护规划等多种规划，多规合一信息平台运用信息化手段，
-							开发出“制定一套标准、形成一张蓝图、再造一套审批流程”的GIS平台。平台采用Ads框架进行开发，ads集成了SSH框架、常用的工具包以及GIS开发包。平台分为两个工程，第一个为业务系统同时也是运维系统，作为第二个地图展示系统的后台。因为平台包含多个系统，所以采用了CAS的开源SSO解决方案。业务主要为规划项目审批，采用了JBPM工作流框架，为第三方提供了常用的项目查询接口。<br>
-						    <b font-size="small">责任描述：</b><br>
+				<li>
+                    <h3>MM应用商场web网站 | 2018.12 - 2020.01</h3>
+					<p>
+						<b font-size="small">使用技术：</b>springboot 、oracle、mysql 、mybatis 、spring security 、 redis 、nginx <br>
+						<b font-size="small">项目描述：</b>							MM应用商场是中移互联网公司在运行的一个在运行近二十年的旧系统，分为前端应用系统、后台管理系统，前端应用系统主要负责查询并缓存最后的页面模板到memcache、redis中，采用封装servlet、类似于freemarker模板的页面、以及spring开发，运行在10台服务器上，使用f5负载均衡器，保证网站服务稳定；后台内容管理系统提供给运营人员管理数据，对数据的增删改时通过ActiveMQ通知各前台应用清理hibernate的二级缓存Ehcache的查询缓存，数据库使用oracle。由于旧系统源码版本失去管理控制，无法直接在旧系统工程进行代码编译，新的活动业务接口功能在新工程上开发dubbo服务provide部署到dubbo集群服务器，并注册到zookeeper集群，再以jar包放到旧系统中以 dubbo consumer 调用远程接口。<br>
+						<b font-size="small">责任描述：</b><br>
+							1. 负责重构版后台管理系统的系统管理模块设计；<br>
+							2. 与第三方接口的对接，生成相应的接口文档；<br>
+							3. 系统重构为 springcloud 微服务架构做准备；<br>
+							4. 负责对旧系统的业务逻辑分析及梳理。<br>
+                    </p>
+				</li>
+				<li>
+                    <h3>飞闻头条 | 2018.11 - 2019.09</h3>
+					<p>
+						<b font-size="small">使用技术：</b>springboot 、oracle、mysql 、mybatis 、spring security 、 redis 、nginx<br>
+						<b font-size="small">项目描述：</b>	飞闻头条(MM头条、MM资讯)是中移动的资讯信息流APP，竞品为今日头条等资讯APP，后台架构分为接口服务、客户端后台管理系统、资讯运营管理系统、爬虫模块四个部分。系统使用springboot框架开发，接口服务部署在四台服务器，使用nginx反向代理、负载均衡，数据库使用 mysql 。项目中多处使用redis缓存以及多线程技术，提高接口的查询返回速度。使用gitlab进行代码、文档版本控制，使用 maven 进行项目管理、打包发布，测试线使用 jenkins 进行集成部署。<br>
+						<b font-size="small">责任描述：</b><br>
+							1. 完成飞闻头条的需求开发计划，主要包括账号管理、角色管理、权限管理、日志管理；<br>
+							2. 负责 android 、ios app 接口、h5 页面接口的开发；<br>
+							3. 负责旧系统的维护，历史遗留 bug 的修复；<br>
+							4. 指导其它新同事熟悉代码工程结构进行需求开发。<br>
+                    </p>
+				</li>
+				<li>
+                    <h3>广州市城市总体规划管理系统 | 2017.10 - 2018.10</h3>
+					<p>
+						<b font-size="small">使用技术：</b>spring 、springmvc、mybatis 、oracle/mysql、jquey、echarts、bootstrap、vue、jbpm4.0 、 redis 、nginx <br>
+						<b font-size="small">项目描述：</b>						系统的背景为新一轮广州市城市总体规划的辅助系统，主要是结合“多规合一”一张图子系统，对广州的重点建设项目进行全生命周期的审批、推进。系统使用ssm框架，数据库为oracle/mysql，项目审批流程使用jbpm工作流框架。系统的首页以及大屏展示页面使用echart进行图表展示，使用nginx反向代理解决前后端分离的跨域问题，多个子系统用户登录使用spring-session+redis来进行session共享。项目实施过程中还辅助客户生成了《广州市城市总体规划（2017-2035年）》草案的专题展示界面。。<br>
+						<b font-size="small">责任描述：</b><br>
+							1. 负责项目审批流程业务的需求开发 ，审批过程中的产生的 pdf 文件采用mozilla开源的PDF.js组件来进行在线查看；<br>
+							2. 将流程展示组件由 flash 升级为 js 展示，解决客户对 flash player 的不兼容问题；<br>
+							3. 实现对审批过程中产生的附件进行“档案管理”的模块的开发，实现规划知识库模块开发；<br>
+							4. 分配小组任务，指导新同事熟悉代码工程结构进行需求开发。<br>
+                    </p>
+				</li>
+                <li>
+                    <h3>规划管理系统 | 2017.10 - 2018.09</h3>
+					<p>
+						<b font-size="small">使用技术：</b>spring 、springmvc、mybatis 、oracle/mysql、jquey、echarts、bootstrap、vue、jbpm4.0 、 redis 、nginx <br>
+						<b font-size="small">项目描述：</b>								作为“多规合一”平台的扩展系统，结合“多规合一”一张图，主要实现规划的“一书三证”的审批业务需求。平台采用Ads框架进行开发，ads集成了SSH框架、常用的工具包以及GIS开发包。系统的统计展示页面使用echarts。pdf档案在线查看采用mozilla开源的PDF.js。为解决接口负载过大时奔溃的问题，使用nginx进行了负载均衡，session共享的解决方案为spring-session + redis。<br>
+						<b font-size="small">责任描述：</b><br>
+							1. 负责“一书三证”业务流程的开发；<br>
+							2. 实现对审批过程中产生的附件进行“档案管理”的模块的开发；<br>
+							3. 实现规划知识库模块开发；<br>
+							4. 指导其它新同事熟悉代码工程结构进行需求开发。<br>
+                    </p>
+				</li>
+				<li>
+					<h3>奥格多规合一信息平台 | 2016.04 - 2017.10</h3>
+					<p>
+						<b font-size="small">使用技术：</b>spring 、springmvc、mybatis 、oracle/mysql、easyui、echarts、jquey、bootstrap、jbpm4.0 、CAS 、jersey<br>
+						<b font-size="small">项目描述：</b>“多规合一”是指统筹衔接国民经济和社会发展规划、城乡规划、土地利用规划和生态环境保护规划等多种规划，多规合一信息平台运用信息化手段，开发出“制定一套标准、形成一张蓝图、再造一套审批流程”的GIS平台。平台采用Ads框架进行开发，ads集成了SSH框架、常用的工具包以及GIS开发包。平台分为两个工程，第一个为业务系统同时也是运维系统，作为第二个地图展示系统的后台。因为平台包含多个系统，所以采用了CAS的开源SSO解决方案。业务主要为规划项目审批，采用了JBPM工作流框架，为第三方提供了常用的项目查询接口。<br>
+						<b font-size="small">责任描述：</b><br>
 							1. 实现时下最实用的业务需求，按时完成上级提出的目标；<br>
 							2. 流程业务的开发；<br>
 							3. 与负责GIS开发的同事合作进行业务开发，例如项目定位、属性查询等；<br>
@@ -203,13 +235,14 @@
 					<li>
                         <h3>湖南农业大学后勤服务系统 | 2015.08 - 2016.01</h3>
                         <p>
+							<b font-size="small">使用技术：</b>spring 、springmvc、jdbcTemplate 、oracle 、memcache<br>
                             <b font-size="small">项目描述：</b>
 							湖南农业大学后勤服务系统是为本校提供便捷信息服务及信息公开的一个系统，基础框架为Spring+Spring mvc+Spring jdbcTemplate，使用maven管理项目。通过调用第三方电网ASP系统提供的web service接口，实现电表读数的查询展示。并采取在晚上进行定时任务查询所有寝室的电费，存入数据库，当余额低于10元时，将对应的寝室信息的数据存入缓存，在早上七点调用短信接口发送短信给对应寝室。后台管理使用easyUi框架，部分组织为宿舍区-楼栋-楼层-寝室号的树结构，宿舍区和楼层有对应的管理员账号。各级管理员可以查看对应级别的统计报表。<br>
 						    <b font-size="small">责任描述：</b><br>
-						    1. 按照需求文档开发相应模块功能；<br>
-							2. 负责对系统进行大部分功能测试，记录并报告bug，之后进行修改，比如修复登录异常、查询展示异常等bug；<br>
-							3. 对查询速度进行优化，频繁使用的公共查询方法独立出来封装；<br>
-							4. 负责界面的适配、美化。<br>
+								1. 按照需求文档开发相应模块功能；<br>
+								2. 负责对系统进行大部分功能测试，记录并报告bug，之后进行修改，比如修复登录异常、查询展示异常等bug；<br>
+								3. 对查询速度进行优化，频繁使用的公共查询方法独立出来封装；<br>
+								4. 负责界面的适配、美化。<br>
                     </li>
                 </ul>
             </div>
