--- a/index.html
+++ b/index.html
@@ -200,19 +200,18 @@
                     <h3>飞闻头条 | 2018.11 - 2019.09</h3>
 					<p>
 						<b font-size="small">使用技术：</b>springboot 、oracle、mysql 、mybatis 、spring security 、 redis 、nginx<br>
-						<b font-size="small">项目描述：</b>	飞闻头条(MM头条、MM资讯)是中移动的资讯信息流APP，竞品为今日头条等资讯APP，后台架构分为接口服务、客户端后台管理系统、资讯运营管理系统、爬虫模块四个部分。系统使用springboot框架开发，接口服务部署在四台服务器，使用nginx反向代理、负载均衡，数据库使用 mysql 。项目中多处使用redis缓存以及多线程技术，提高接口的查询返回速度。使用gitlab进行代码、文档版本控制，使用 maven 进行项目管理、打包发布，测试线使用 jenkins 进行集成部署。<br>
+						<b font-size="small">项目描述：</b>	飞闻头条(MM头条、MM资讯)是中移动的资讯信息流APP，后台架构分为接口服务、客户端后台管理系统、资讯运营管理系统、爬虫模块四个部分。系统使用springboot框架开发，接口服务部署在四台服务器，使用nginx反向代理、负载均衡，数据库使用 mysql 。项目中多处使用redis缓存以及多线程技术，提高接口的查询返回速度。使用gitlab进行代码、文档版本控制，使用 maven 进行项目管理、打包发布，测试线使用 jenkins 进行集成部署。<br>
 						<b font-size="small">责任描述：</b><br>
 							1. 完成飞闻头条的需求开发计划，主要包括账号管理、角色管理、权限管理、日志管理；<br>
 							2. 负责 android 、ios app 接口、h5 页面接口的开发；<br>
 							3. 负责旧系统的维护，历史遗留 bug 的修复；<br>
-							4. 指导其它新同事熟悉代码工程结构进行需求开发。<br>
                     </p>
 				</li>
 				<li>
                     <h3>广州市城市总体规划管理系统 | 2017.10 - 2018.10</h3>
 					<p>
 						<b font-size="small">使用技术：</b>spring 、springmvc、mybatis 、oracle/mysql、jquey、echarts、bootstrap、vue、jbpm4.0 、 redis 、nginx <br>
-						<b font-size="small">项目描述：</b>						系统的背景为新一轮广州市城市总体规划的辅助系统，主要是结合“多规合一”一张图子系统，对广州的重点建设项目进行全生命周期的审批、推进。系统使用ssm框架，数据库为oracle/mysql，项目审批流程使用jbpm工作流框架。系统的首页以及大屏展示页面使用echart进行图表展示，使用nginx反向代理解决前后端分离的跨域问题，多个子系统用户登录使用spring-session+redis来进行session共享。项目实施过程中还辅助客户生成了《广州市城市总体规划（2017-2035年）》草案的专题展示界面。。<br>
+						<b font-size="small">项目描述：</b>						系统的背景为新一轮广州市城市总体规划的辅助系统，主要是结合“多规合一”一张图子系统，对广州的重点建设项目进行全生命周期的审批、推进。系统使用ssm框架，数据库为oracle/mysql，项目审批流程使用jbpm工作流框架。系统的首页以及大屏展示页面使用echart进行图表展示，使用nginx反向代理解决前后端分离的跨域问题，多个子系统用户登录使用spring-session+redis来进行session共享。项目实施过程中还辅助客户生成了《广州市城市总体规划（2017-2035年）》草案的专题展示界面。<br>
 						<b font-size="small">责任描述：</b><br>
 							1. 负责项目审批流程业务的需求开发 ，审批过程中的产生的 pdf 文件采用mozilla开源的PDF.js组件来进行在线查看；<br>
 							2. 将流程展示组件由 flash 升级为 js 展示，解决客户对 flash player 的不兼容问题；<br>
@@ -224,7 +223,7 @@
                     <h3>规划管理系统 | 2017.10 - 2018.09</h3>
 					<p>
 						<b font-size="small">使用技术：</b>spring 、springmvc、mybatis 、oracle/mysql、jquey、echarts、bootstrap、vue、jbpm4.0 、 redis 、nginx <br>
-						<b font-size="small">项目描述：</b>								作为“多规合一”平台的扩展系统，结合“多规合一”一张图，主要实现规划的“一书三证”的审批业务需求。平台采用Ads框架进行开发，ads集成了SSH框架、常用的工具包以及GIS开发包。系统的统计展示页面使用echarts。pdf档案在线查看采用mozilla开源的PDF.js。为解决接口负载过大时奔溃的问题，使用nginx进行了负载均衡，session共享的解决方案为spring-session + redis。<br>
+						<b font-size="small">项目描述：</b>								作为“多规合一”平台的扩展系统，结合“多规合一”一张图，主要实现规划的“一书三证”的审批业务需求。平台采用Ads框架进行开发，ads集成了SSH框架、展示页面使用echarts、在线查看采用mozilla开源js，使用nginx进行了负载均衡。<br>
 						<b font-size="small">责任描述：</b><br>
 							1. 负责“一书三证”业务流程的开发；<br>
 							2. 实现对审批过程中产生的附件进行“档案管理”的模块的开发；<br>
@@ -251,7 +250,7 @@
                         <p>
 							<b font-size="small">使用技术：</b>spring 、springmvc、jdbcTemplate 、oracle 、memcache<br>
                             <b font-size="small">项目描述：</b>
-							湖南农业大学后勤服务系统是为本校提供便捷信息服务及信息公开的一个系统，基础框架为Spring+Spring mvc+Spring jdbcTemplate，使用maven管理项目。通过调用第三方电网ASP系统提供的web service接口，实现电表读数的查询展示。并采取在晚上进行定时任务查询所有寝室的电费，存入数据库，当余额低于10元时，将对应的寝室信息的数据存入缓存，在早上七点调用短信接口发送短信给对应寝室。后台管理使用easyUi框架，部分组织为宿舍区-楼栋-楼层-寝室号的树结构，宿舍区和楼层有对应的管理员账号。各级管理员可以查看对应级别的统计报表。<br>
+							湖南农业大学后勤服务系统是为本校提供便捷信息服务及信息公开的一个系统，基础框架为Spring+Spring mvc+Spring jdbcTemplate，使用maven管理项目。通过调用第三方电网ASP系统提供的web service接口，实现电表读数的查询展示，并采取在晚上进行定时任务查询所有寝室的电费，存入数据库，当余额低于10元时，将对应的寝室信息的数据存入缓存，在早上七点调用短信接口发送短信给对应寝室。后台管理使用easyUi框架，部分组织为宿舍区-楼栋-楼层-寝室号的树结构，宿舍区和楼层有对应的管理员账号。各级管理员可以查看对应级别的统计报表。<br>
 						    <b font-size="small">责任描述：</b><br>
 								1. 按照需求文档开发相应模块功能；<br>
 								2. 负责对系统进行大部分功能测试，记录并报告bug，之后进行修改，比如修复登录异常、查询展示异常等bug；<br>
