--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
                        
             <div class="skill info-unit">
-                <h2 class="info-header"><i class="iconfont icon-star"></i> <span class="info-title">教育经历</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-edit"></i> <span class="info-title">教育经历</span></h2>
                 <hr>
                 <ul class="progress-list">
 		    <li>
@@ -138,7 +138,16 @@
                         <label class="left-label">其他</label><span class="label-value">熟练tomcat 配置，熟悉 Nginx 配置</span>
                     </li>
                 </ul>
-            </div>            
+            </div>  
+	<div class="skill info-unit">
+                <h2 class="info-header"><i class="iconfont icon-star"></i> <span class="info-title">个人评价</span></h2>
+                <hr>
+                <ul class="progress-list">
+		    <li>
+                        <h3>个人拥有4.5年的工作经验，先后在传统行业与互联网行业就职，具有全栈开发，后台开发的高并发架构和数据运营项目经历，擅长解决疑难问题，以及采用灵活的解决方案。热爱开源，良好的英文阅读能力，会使用开源的轮子解决问题。工作中认真负责，和同事相处融洽，热爱生活</h3>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="main">
 
