--- a/index.html
+++ b/index.html
@@ -144,8 +144,9 @@
                 <hr>
                 <ul class="progress-list">
 		    <li>
-                        <h3>个人拥有4.5年的工作经验，先后在传统行业与互联网行业就职，具有全栈开发，后台开发的高并发架构和数据运营项目经历，擅长解决疑难问题，以及采用灵活的解决方案。热爱开源，良好的英文阅读能力，会使用开源的轮子解决问题。工作中认真负责，和同事相处融洽，热爱生活</h3>
-                    </li>
+                        <h4>个人拥有4.5年的工作经验，先后在传统行业与互联网行业就职，具有全栈开发，后台开发的高并发架构和数据运营项目经历，擅长解决疑难问题，以及采用灵活的解决方案。热爱开源，良好的英文阅读能力，会使用开源的轮子解决问题。工作中认真负责，和同事相处融洽，热爱生活</h4>
+                    <label>个人拥有4.5年的工作经验，先后在传统行业与互联网行业就职，具有全栈开发，后台开发的高并发架构和数据运营项目经历，擅长解决疑难问题，以及采用灵活的解决方案。热爱开源，良好的英文阅读能力，会使用开源的轮子解决问题。工作中认真负责，和同事相处融洽，热爱生活</label>
+		</li>
                 </ul>
             </div>
         </div>
