--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <label class="left-label">开源作品</label><span class="label-value">因热爱编程应用，个人利用树莓派进行linux的开发实战，通过 GPIO 接口采用mysql数据库、flask 框架以及echarts等技术进行python项目开发</span>
 		    </li>
 		    <li>
-                        <label class="left-label">源码地址</label><span class="label-value">https://github.com/yeqizhang
+                        <label class="left-label">源码地址</label><span class="label-value">https://github.com/yeqizhang<br>
 			    /raspberrypi_ht_statistics</span>
                     </li>
                     <li>
