--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                     <h3>飞闻头条、MM应用商场web网站 | 2018.11 - 2020.01</h3>
 					<p>
 						<b font-size="small">使用技术：</b>springboot 、oracle、mysql 、mybatis 、spring security 、 redis 、nginx、ActiveMQ、dubbo<br>
-						<b font-size="small">项目描述：</b> 飞闻头条(MM头条、MM资讯)是中移动的资讯信息流APP，后台架构分为接口服务、客户端后台管理系统、资讯运营管理系统、爬虫模块四个部分。系统使用springboot框架开发，接口服务部署在四台服务器，使用nginx反向代理、负载均衡，数据库使用 mysql 。项目中多处使用redis缓存以及多线程技术，提高接口的查询返回速度。使用gitlab进行代码、文档版本控制，使用 maven 进行项目管理、打包发布，测试线使用 jenkins 进行集成部署。<br>
-						MM应用商场是中移互联网公司在运行的一个在运行近二十年的旧系统，分为前端应用系统、后台管理系统，前端应用系统主要负责查询并缓存最后的页面模板到memcache、redis中，采用封装servlet、类似于freemarker模板的页面、以及spring开发，运行在10台服务器上，使用f5负载均衡器，保证网站服务稳定；后台内容管理系统提供给运营人员管理数据，对数据的增删改时通过ActiveMQ通知各前台应用清理hibernate的二级缓存Ehcache的查询缓存，数据库使用oracle。由于旧系统源码版本失去管理控制，无法直接在旧系统工程进行代码编译，新的活动业务接口功能在新工程上开发dubbo服务provide部署到dubbo集群服务器，并注册到zookeeper集群，再以jar包放到旧系统中以 dubbo consumer 调用远程接口。<br>
+						<b font-size="small">项目描述：</b> 飞闻头条(MM头条、MM资讯)是中移动的资讯信息流APP，后台架构分为接口服务、客户端后台管理系统、资讯运营管理系统、爬虫模块四个部分。项目中多处使用redis缓存以及多线程技术，提高接口的查询返回速度。<br>
+						MM应用商场是中移互联网公司在运行的一个在运行近二十年的旧系统，分为前端应用系统、后台管理系统，前端应用系统主要负责查询并缓存最后的页面模板到memcache、redis中，采用封装servlet、类似于freemarker模板的页面、以及spring开发，运行在10台服务器上，使用f5负载均衡器，保证网站服务稳定；后台内容管理系统提供给运营人员管理数据，对数据的增删改时通过ActiveMQ通知各前台应用清理hibernate的二级缓存Ehcache的查询缓存。<br>
 						<b font-size="small">责任描述：</b><br>
 							1. 除了完成飞闻头条的需求开发计划，负责重构版后台管理系统的系统管理模块设计，主要包括账号管理、角色管理、权限管理、日志管理 ；<br>
 							2. 负责 android 、ios app 接口、h5 页面接口的开发；与第三方接口的对接；生成相应的接口文档 ；<br>
@@ -215,7 +215,7 @@
                     <h3>广州市城市总体规划管理系统 | 2017.10 - 2018.10</h3>
 					<p>
 						<b font-size="small">使用技术：</b>spring 、springmvc、mybatis 、oracle/mysql、jquey、echarts、bootstrap、vue、jbpm4.0 、 redis 、nginx <br>
-						<b font-size="small">项目描述：</b>						系统的背景为新一轮广州市城市总体规划的辅助系统，主要是结合“多规合一”一张图子系统，对广州的重点建设项目进行全生命周期的审批、推进。系统使用ssm框架，数据库为oracle/mysql，项目审批流程使用jbpm工作流框架。系统的首页以及大屏展示页面使用echart进行图表展示，使用nginx反向代理解决前后端分离的跨域问题，多个子系统用户登录使用spring-session+redis来进行session共享。项目实施过程中还辅助客户生成了《广州市城市总体规划（2017-2035年）》草案的专题展示界面。<br>
+						<b font-size="small">项目描述：</b>系统的背景为新一轮广州市城市总体规划的辅助系统，主要是结合“多规合一”一张图子系统，对广州的重点建设项目进行全生命周期的审批、推进。系统使用ssm框架，数据库为oracle/mysql，项目审批流程使用jbpm工作流框架。系统的首页以及大屏展示页面使用echart进行图表展示，使用nginx反向代理解决前后端分离的跨域问题，多个子系统用户登录使用spring-session+redis来进行session共享。项目实施过程中还辅助客户生成了《广州市城市总体规划（2017-2035年）》草案的专题展示界面。<br>
 						<b font-size="small">责任&成果：</b><br>
 							1. 负责项目审批流程业务的需求开发 ，审批过程中的产生的 pdf 文件采用mozilla开源的PDF.js组件来进行在线查看；<br>
 							2. 将流程展示组件由 flash 升级为 js 展示，解决客户对 flash player 的不兼容问题；<br>
@@ -241,8 +241,7 @@
                         <h3>湖南农业大学后勤服务系统 | 2015.08 - 2016.01</h3>
                         <p>
 							<b font-size="small">使用技术：</b>spring 、springmvc、jdbcTemplate 、oracle 、memcache<br>
-                            <b font-size="small">项目描述：</b>
-							湖南农业大学后勤服务系统是为本校提供便捷信息服务及信息公开的一个系统，基础框架为Spring+Spring mvc+Spring jdbcTemplate，使用maven管理项目。通过调用第三方电网ASP系统提供的web service接口，实现电表读数的查询展示，并采取在晚上进行定时任务查询所有寝室的电费，存入数据库，当余额低于10元时，将对应的寝室信息的数据存入缓存，在早上七点调用短信接口发送短信给对应寝室。后台管理使用easyUi框架，部分组织为宿舍区-楼栋-楼层-寝室号的树结构，宿舍区和楼层有对应的管理员账号。各级管理员可以查看对应级别的统计报表。<br>
+                            <b font-size="small">项目描述：</b>湖南农业大学后勤服务系统是为本校提供便捷信息服务及信息公开的一个系统，基础框架为Spring+Spring mvc+Spring jdbcTemplate，使用maven管理项目。通过调用第三方电网ASP系统提供的web service接口，实现电表读数的查询展示，并采取在晚上进行定时任务查询所有寝室的电费，存入数据库，当余额低于10元时，将对应的寝室信息的数据存入缓存，在早上七点调用短信接口发送短信给对应寝室。后台管理使用easyUi框架，部分组织为宿舍区-楼栋-楼层-寝室号的树结构，宿舍区和楼层有对应的管理员账号。各级管理员可以查看对应级别的统计报表。<br>
 						    <b font-size="small">责任描述：</b><br>
 								1. 按照需求文档开发相应模块功能；<br>
 								2. 负责对系统进行大部分功能测试，记录并报告bug，之后进行修改，比如修复登录异常、查询展示异常等bug；<br>
