--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
                     <input type="text" id="avatar-url">
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div>
-                <h1 id="username" >谭国臣</h1>
-                <h4 id="persona-tag" >Java web开发</h4>
             </div>
             
             <div class="profile info-unit">
@@ -110,12 +108,8 @@
                 <hr>
                 <ul class="stack-list">
 		    <li>
-                        <label class="left-label">开源作品</label><span class="label-value">因热爱编程应用，个人利用树莓派进行linux的开发实战，通过 GPIO 接口采用mysql数据库、flask 框架以及echarts等技术进行python项目开发</span>
+                        <label class="left-label">开源作品</label><span class="label-value">因热爱编程应用，个人利用树莓派进行linux的开发实战，通过 GPIO 接口采用mysql数据库、flask 框架以及echarts等技术进行python项目开发，源码地址：https://github.com/yeqizhang/raspberrypi_ht_statistics</span>
 		    </li>
-		    <li>
-                        <label class="left-label">源码地址</label><span class="label-value">https://github.com/yeqizhang<br>
-			    /raspberrypi_ht_statistics</span>
-                    </li>
                     <li>
                         <label class="left-label">后端技术</label><span class="label-value">熟练使用 java 集合、多线程</span>
                     </li>
@@ -123,16 +117,16 @@
                         <label class="left-label">前端技术</label><span class="label-value">熟悉JavaScript、HTML/CSS、easyui、echarts、jquey、bootstrap等前端技术，了解 vue.js</span>
                     </li>
 		    <li>
-                        <label class="left-label">框架组件</label><span class="label-value">熟练使用 spring 生态体系技术，包括 springmvc 、 mybatis 、 hibernate 、 springboot ，了解springcloud 组件</span>
+                        <label class="left-label">框架组件</label><span class="label-value">熟练spring 生态体系技术，包括 springmvc 、 mybatis 、 hibernate 、 springboot ，了解springcloud 组件</span>
                     </li>
                     <li>
-                        <label class="left-label">服务</label><span class="label-value">熟练使用 redis , 了解 Zookeeper 、 ElasticSearch</span>
+                        <label class="left-label">服务</label><span class="label-value">熟练redis , 了解 Zookeeper 、 ElasticSearch</span>
                     </li>
 		    <li>
-                        <label class="left-label">数据库</label><span class="label-value">熟练使用 mysql 、 oracle</span>
+                        <label class="left-label">数据库</label><span class="label-value">熟练mysql 、 oracle</span>
                     </li>
 		    <li>
-                        <label class="left-label">开发工具</label><span class="label-value">熟练使用 intellij Idea 、 eclipse 等 IDE 进行代码编写， maven 进行项目构建，熟悉 SVN 、 Git代码管理，了解 Docker 的使用，了解 DevOps</span>
+                        <label class="left-label">开发工具</label><span class="label-value">熟练intellij Idea 、 eclipse 等 IDE 进行代码编写， maven 进行项目构建，熟悉 SVN 、 Git代码管理，了解 Docker 的使用，了解 DevOps</span>
                     </li>
 		    <li>
                         <label class="left-label">其他</label><span class="label-value">熟练tomcat 配置，熟悉 Nginx 配置</span>
@@ -163,7 +157,7 @@
                         	彩讯科技股份广州分公司 | 南方移动项目部 | Java后端开发<br>
                         </h3>
                         <p contenteditable="true">
-	                        <b font-size="small">经历总结:</b>如果出现实时线上问题会让人绷紧每条神经、经常晚上一两点上线、周末也要呆在有电脑的地方这是我对互联网行业的初识，虽然看起来有时候工作时间不稳定，但是实际上的工作内容和压力不会很紧张。此次工作是纯后端开发，不仅仅是功能接口的实现更多的在于接口性能上的优化，比如多线程并发问题怎么样能够在当前环境下得到最优的解决，使我逐步熟悉互联网的高并发架构和数据运营等<br>
+	                        <b font-size="small">经历总结:</b>此次工作是纯后端开发，不仅仅是功能接口的实现更多的在于接口性能上的优化，比如多线程并发问题怎么样能够在当前环境下得到最优的解决，使我逐步熟悉互联网的高并发架构和数据运营等<br>
                         </p>
                     </li>
                     <li>
@@ -182,7 +176,7 @@
 				湖南农业大学后勤服务集团 | java web开发<br>
 			    </h3>
                         <p contenteditable="true">
-				<b font-size="small">经历总结:</b>初出茅庐的我感于老师的赏识，感于其他专业校友的帮助，让我有一个很棒项目初体验，能够按时按量完成任务。此次经历虽然时间很短，但让我对系统各类框架、数据库类型、开发语言多样性有了进一步认知，也初步了解信息系统生命周期，明确了自己的不足和学习发展方向，对软件开发有了执着的热爱。<br>
+				<b font-size="small">经历总结:</b>此次经历虽然时间很短，但让我对系统各类框架、数据库类型、开发语言多样性有了进一步认知，也初步了解信息系统生命周期，明确了自己的不足和学习发展方向，对软件开发有了执着的热爱。<br>
                         </p>
                     </li>
                 </ul class="experience-list">
