--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                 <hr>
                 <ul class="stack-list">
 		    <li>
-                        <label class="left-label">开源作品</label><span class="label-value">因热爱编程应用，个人利用树莓派进行linux的开发实战，通过 GPIO 接口采用mysql数据库、flask 框架以及echarts等技术进行python项目开发，源码地址：https://github.com/yeqizhang/raspberrypi_ht_statistics</span>
+                        <label class="left-label">开源作品</label><span class="label-value">因热爱编程应用，个人利用树莓派进行linux的开发实战，通过 GPIO 接口采用mysql数据库、flask 框架以及echarts等技术进行python项目开发。源码地址：https://github.com/yeqizhang</span>
 		    </li>
                     <li>
-                        <label class="left-label">后端技术</label><span class="label-value">熟练使用 java 集合、多线程</span>
+                        <label class="left-label">后端技术</label><span class="label-value">熟练java 集合、多线程</span>
                     </li>
                     <li>
                         <label class="left-label">前端技术</label><span class="label-value">熟悉JavaScript、HTML/CSS、easyui、echarts、jquey、bootstrap等前端技术，了解 vue.js</span>
@@ -199,8 +199,8 @@
 							3. 负责旧系统的维护，历史遗留 bug 的修复 ；<br>
 							4. 为系统重构为 springcloud 微服务架构做准备，负责对旧系统的业务逻辑分析及梳理。<br>
 						<b font-size="small">成果：</b><br>
-							1. 此项目为接手其它公司的东西，MM应用商城年代久远，原有很多文档基本都遗失了。入职后在修复遗留bug的同时，与前运维沟通、梳理了整个项目的框架，经过一个多月的时间了解了整个项目的架构和相应功能实现，修复了过去提出的共计几十个问题单，并与测试沟通，提出了我在代码梳理和自行测试中发现的几个问题，让他提单给我，然后一并修复了。<br>
-							2. 短地址小应用的短地址配置生效时间由第2天生效缩短为几分钟之内：在原有短地址架构的基础上平滑升级。原来的设计为在准现网一个小web程序的页面配置k-v（短地址标识-长地址），数据存储在后台一个配置文件中，使用sync定时同步到十台前端服务器，需要各服务器的短地址程序在凌晨3点重启后生效。我让运维将同步的频率控制在5分钟同步一次，并且改造项目使用 java 的定时线程池定时3分钟读取一次配置文件，并将原来的存储对象HashMap改为ConcurrentHashMap保证数据安全。上线后稳定运行，提升了运营效率。<br>
+							1. MM应用商城是运营年代已久的项目，入职起初，在遗失很多原有文档的基础上，通过与对接运维相关人员，解决了历史遗留的几十个难点问题，并梳理了整个项目的框架，得到了领导认可和赞许。<br>
+							2. 短地址小应用的短地址配置生效时间由第2天生效缩短为几分钟之内：在原有短地址架构的基础上平滑升级。原来的设计为在准现网一个小web程序的页面配置k-v，数据存储在后台一个配置文件中，使用sync定时同步到十台前端服务器，需要各服务器的短地址程序在凌晨3点重启后生效。我让运维将同步的频率控制在5分钟同步一次，并且改造项目使用 java 的定时线程池定时3分钟读取一次配置文件，并将原来的存储对象HashMap改为ConcurrentHashMap保证数据安全。上线后稳定运行，提升了运营效率。<br>
 							3. 短时间之内响应客户需求，加班加点及时完成了工信部要求的APP隐私政策的后台注销接口开发。<br>
 							4. 配合前端同事提供返回广告api token的接口，成功接入广告后提升了运营收入。<br>
 					</p>
