--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
 							4. 为系统重构为 springcloud 微服务架构做准备，负责对旧系统的业务逻辑分析及梳理。<br>
 						<b font-size="small">成果：</b><br>
 							1. MM应用商城是运营年代已久的项目，入职起初，在遗失很多原有文档的基础上，通过与对接运维相关人员，解决了历史遗留的几十个难点问题，并梳理了整个项目的框架，得到了领导认可和赞许。<br>
-							2. 短地址小应用的短地址配置生效时间由第2天生效缩短为几分钟之内：在原有短地址架构的基础上平滑升级。原来的设计为在准现网一个小web程序的页面配置k-v，数据存储在后台一个配置文件中，使用sync定时同步到十台前端服务器，需要各服务器的短地址程序在凌晨3点重启后生效。我让运维将同步的频率控制在5分钟同步一次，并且改造项目使用 java 的定时线程池定时3分钟读取一次配置文件，并将原来的存储对象HashMap改为ConcurrentHashMap保证数据安全。上线后稳定运行，提升了运营效率。<br>
-							3. 短时间之内响应客户需求，加班加点及时完成了工信部要求的APP隐私政策的后台注销接口开发。<br>
+							2. 通过我对程序的设计更改，实现将短地址小应用的短地址配置生效时间由第2天生效缩短为几分钟之内，即修复了原有的问题，又保证数据安全，提升了运营效率。<br>
+							3. 在短时间之内响应客户需求，及时完成了工信部要求的APP隐私政策的后台注销接口开发，得到客户赞许。<br>
 							4. 配合前端同事提供返回广告api token的接口，成功接入广告后提升了运营收入。<br>
 					</p>
 				</li>
