--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 						<b font-size="small">成果：</b><br>
 							1. MM应用商城是运营年代已久的项目，入职起初，在遗失很多原有文档的基础上，通过与对接运维相关人员，解决了历史遗留的几十个难点问题，并梳理了整个项目的框架，得到了领导认可和赞许。<br>
 							2. 通过我对程序的设计更改，实现将短地址小应用的短地址配置生效时间由第2天生效缩短为几分钟之内，即修复了原有的问题，又保证数据安全，提升了运营效率。<br>
-							3. 在短时间之内响应客户需求，及时完成了工信部要求的APP隐私政策的后台注销接口开发，得到客户赞许。<br>
+							3. 在短时间之内响应客户需求，及时完成了工信部要求的APP隐私政策的后台注销接口开发。<br>
 							4. 配合前端同事提供返回广告api token的接口，成功接入广告后提升了运营收入。<br>
 					</p>
 				</li>
@@ -202,7 +202,7 @@
                     <h3>广州市城市总体规划管理系统 | 2017.10 - 2018.10</h3>
 					<p>
 						<b font-size="small">使用技术：</b>spring 、springmvc、mybatis 、oracle/mysql、jquey、echarts、bootstrap、vue、jbpm4.0 、 redis 、nginx <br>
-						<b font-size="small">项目描述：</b>系统的背景为新一轮广州市城市总体规划的辅助系统，主要是结合“多规合一”一张图子系统，对广州的重点建设项目进行全生命周期的审批、推进。系统使用ssm框架，数据库为oracle/mysql，项目审批流程使用jbpm工作流框架。系统的首页以及大屏展示页面使用echart进行图表展示，使用nginx反向代理解决前后端分离的跨域问题，多个子系统用户登录使用spring-session+redis来进行session共享。项目实施过程中还辅助客户生成了《广州市城市总体规划（2017-2035年）》草案的专题展示界面。<br>
+						<b font-size="small">项目描述：</b>系统的背景为新一轮广州市城市总体规划的辅助系统，主要是结合“多规合一”一张图子系统，对广州的重点建设项目进行全生命周期的审批、推进。系统使用ssm框架，数据库为oracle/mysql，项目审批流程使用jbpm工作流框架。系统的首页以及大屏展示页面使用echart进行图表展示，使用nginx反向代理解决前后端分离的跨域问题，多个子系统用户登录使用spring-session+redis来进行session共享。<br>
 						<b font-size="small">责任&成果：</b><br>
 							1. 负责项目审批流程业务的需求开发 ，审批过程中的产生的 pdf 文件采用mozilla开源的PDF.js组件来进行在线查看；<br>
 							2. 将流程展示组件由 flash 升级为 js 展示，解决客户对 flash player 的不兼容问题；<br>
@@ -214,7 +214,7 @@
 					<h3>奥格多规合一信息平台 | 2016.04 - 2017.10</h3>
 					<p>
 						<b font-size="small">使用技术：</b>spring 、springmvc、mybatis 、oracle/mysql、easyui、echarts、jquey、bootstrap、jbpm4.0 、CAS 、jersey<br>
-						<b font-size="small">项目描述：</b>“多规合一”是指统筹衔接国民经济和社会发展规划、城乡规划、土地利用规划和生态环境保护规划等多种规划，多规合一信息平台运用信息化手段，开发出“制定一套标准、形成一张蓝图、再造一套审批流程”的GIS平台。平台采用Ads框架进行开发，ads集成了SSH框架、常用的工具包以及GIS开发包。平台分为两个工程，第一个为业务系统同时也是运维系统，作为第二个地图展示系统的后台。因为平台包含多个系统，所以采用了CAS的开源SSO解决方案。业务主要为规划项目审批，采用了JBPM工作流框架，为第三方提供了常用的项目查询接口。<br>
+						<b font-size="small">项目描述：</b>“多规合一”是指统筹衔接国民经济和社会发展规划、城乡规划、土地利用规划和生态环境保护规划等多种规划，多规合一信息平台运用信息化手段，开发出“制定一套标准、形成一张蓝图、再造一套审批流程”的GIS平台。平台采用Ads框架进行开发，ads集成了SSH框架、常用的工具包以及GIS开发包，采用了CAS的开源SSO解决方案、JBPM工作流框架。<br>
 						<b font-size="small">责任&成果：</b><br>
 							1. 实现客户的业务需求，按时完成上级提出的目标 。产品采取复制到实施组再定制开发的形式，按时按质地完成了实施部门提交的疑难需求的开发，缩短了项目开发周期；<br>
 							2. 负责项目审批流程业务的开发，进行前端页面、后台接口开发，实现了一些客户审美疲劳要求的换肤功能；<br>
@@ -227,7 +227,7 @@
                         <h3>湖南农业大学后勤服务系统 | 2015.08 - 2016.01</h3>
                         <p>
 							<b font-size="small">使用技术：</b>spring 、springmvc、jdbcTemplate 、oracle 、memcache<br>
-                            <b font-size="small">项目描述：</b>湖南农业大学后勤服务系统是为本校提供便捷信息服务及信息公开的一个系统，基础框架为Spring+Spring mvc+Spring jdbcTemplate，使用maven管理项目。通过调用第三方电网ASP系统提供的web service接口，实现电表读数的查询展示，并采取在晚上进行定时任务查询所有寝室的电费，存入数据库，当余额低于10元时，将对应的寝室信息的数据存入缓存，在早上七点调用短信接口发送短信给对应寝室。后台管理使用easyUi框架，部分组织为宿舍区-楼栋-楼层-寝室号的树结构，宿舍区和楼层有对应的管理员账号。各级管理员可以查看对应级别的统计报表。<br>
+                            <b font-size="small">项目描述：</b>湖南农业大学后勤服务系统是为本校提供便捷信息服务及信息公开的一个系统，基础框架为Spring+Spring mvc+Spring jdbcTemplate，使用maven管理项目。通过调用第三方电网ASP系统提供的web service接口，实现电表读数的查询展示，并采取在晚上进行定时任务查询所有寝室的电费，存入数据库，当余额低于10元时，将对应的寝室信息的数据存入缓存，在早上七点调用短信接口发送短信给对应寝室。后台管理使用easyUi框架，部分组织为宿舍区-楼栋-楼层-寝室号的树结构，宿舍区和楼层有对应的管理员账号。<br>
 						    <b font-size="small">责任描述：</b><br>
 								1. 按照需求文档开发相应模块功能；<br>
 								2. 负责对系统进行大部分功能测试，记录并报告bug，之后进行修改，比如修复登录异常、查询展示异常等bug；<br>
