--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <hr>
                 <ul class="progress-list">
 		    <li>
-                        <h5 style="line-height: 2;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;个人拥有4.5年的工作经验，先后在传统行业与互联网行业就职，具有全栈开发，后台开发的高并发架构和数据运营项目经历，擅长解决疑难问题，以及采用灵活的解决方案。热爱开源，良好的英文阅读能力，会使用开源的轮子解决问题。工作中认真负责，和同事相处融洽，热爱生活</h5>
+                        <h5 style="line-height:1.8;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;个人拥有4.5年的工作经验，先后在传统行业与互联网行业就职，具有全栈开发，后台开发的高并发架构和数据运营项目经历，擅长解决疑难问题，以及采用灵活的解决方案。热爱开源，良好的英文阅读能力，会使用开源的轮子解决问题。工作中认真负责，和同事相处融洽，热爱生活</h5>
 		</li>
                 </ul>
             </div>
@@ -195,8 +195,8 @@
 				<li>
                     <h3>广州市城市总体规划管理系统 | 2017.10 - 2018.09</h3>
 					<p>
-						<b font-size="small">使用技术：</b>spring 、struts2、hibernate 、oracle/mysql、jquey、echarts、bootstrap、vue、jbpm4.0 、 redis 、nginx <br>
-						<b font-size="small">项目描述：</b>系统的背景为新一轮广州市城市总体规划的辅助系统，主要是结合“多规合一”一张图子系统，对广州的重点建设项目进行全生命周期的审批、推进。系统使用ssm框架，数据库为oracle/mysql，项目审批流程使用jbpm工作流框架。系统的首页以及大屏展示页面使用echart进行图表展示。<br>
+						<b font-size="small">使用技术：</b>spring 、struts2、hibernate 、oracle、jquey、echarts、bootstrap、vue、jbpm4.0<br>
+						<b font-size="small">项目描述：</b>系统的背景为新一轮广州市城市总体规划的辅助系统，主要是结合“多规合一”一张图子系统，对广州的重点建设项目进行全生命周期的审批、推进。系统使用ssm框架，数据库为oracle，项目审批流程使用jbpm工作流框架。系统的首页以及大屏展示页面使用echart进行图表展示。<br>
 						<b font-size="small">责任&成果：</b><br>
 							1. 负责项目审批流程业务的需求开发 ，审批过程中的产生的 pdf 文件采用mozilla开源的PDF.js组件来进行在线查看；<br>
 							2. 将流程展示组件由 flash 升级为 js 展示，解决客户对 flash player 的不兼容问题；<br>
@@ -207,7 +207,7 @@
 				<li>
 					<h3>奥格多规合一信息平台 | 2016.04 - 2017.10</h3>
 					<p>
-						<b font-size="small">使用技术：</b>spring 、struts2、hibernate  、oracle/mysql、easyui、echarts、jquey、bootstrap、jbpm4.0 、CAS 、jersey<br>
+						<b font-size="small">使用技术：</b>spring 、struts2、hibernate、oracle、easyui、echarts、jquey、bootstrap、jbpm4.0 、CAS 、jersey<br>
 						<b font-size="small">项目描述：</b>“多规合一”是指统筹衔接国民经济和社会发展规划、城乡规划、土地利用规划和生态环境保护规划等多种规划，多规合一信息平台运用信息化手段，开发出“制定一套标准、形成一张蓝图、再造一套审批流程”的GIS平台。平台采用Ads框架进行开发，ads集成了SSH框架、常用的工具包以及GIS开发包，采用了CAS的开源SSO解决方案、JBPM工作流框架。<br>
 						<b font-size="small">责任&成果：</b><br>
 							1. 实现客户的业务需求，按时完成上级提出的目标 。产品采取复制到实施组再定制开发的形式，按时按质地完成了实施部门提交的疑难需求的开发，缩短了项目开发周期；<br>
