--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				<li>
                     <h3>广州市城市总体规划管理系统 | 2017.10 - 2018.09</h3>
 					<p>
-						<b font-size="small">使用技术：</b>spring 、struts2、hibernate 、oracle、jquey、echarts、bootstrap、vue、jbpm4.0<br>
+						<b font-size="small">使用技术：</b>spring 、struts2、hibernate 、oracle、jquey、echarts、bootstrap、jbpm4.0<br>
 						<b font-size="small">项目描述：</b>系统的背景为新一轮广州市城市总体规划的辅助系统，主要是结合“多规合一”一张图子系统，对广州的重点建设项目进行全生命周期的审批、推进。系统使用ssm框架，数据库为oracle，项目审批流程使用jbpm工作流框架。系统的首页以及大屏展示页面使用echart进行图表展示。<br>
 						<b font-size="small">责任&成果：</b><br>
 							1. 负责项目审批流程业务的需求开发 ，审批过程中的产生的 pdf 文件采用mozilla开源的PDF.js组件来进行在线查看；<br>
