--- a/index2.html
+++ b/index2.html
@@ -68,10 +68,10 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">手机</label><span class="label-value">15779707893</span>
+                        <label class="left-label">手机</label><span class="label-value">157****7893</span>
                     </li>
                     <li>
-                        <label class="left-label">邮箱</label><span class="label-value">1203684617@qq.com</span>
+                        <label class="left-label">邮箱</label><span class="label-value">120***4617@qq.com</span>
                     </li>
 
                 </ul>
