--- a/index1.html
+++ b/index1.html
@@ -45,7 +45,7 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">手机</label><span class="label-value">15084721503</span>
+                        <label class="left-label">手机</label><span class="label-value">150****1503</span>
                     </li>
                     <li>
                         <label class="left-label">邮箱</label><span class="label-value">yqz19920528@163.com</span>
